# sec-graph

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  HANDOFF.md  LICENSE  NOTICE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/agents/: doc-writer.md  reviewer.md  security-auditor.md  simplifier.md  tester.md
.claude/skills/new-wp/: SKILL.md
.claude/skills/session-close/: SKILL.md
.claude/skills/simplify-pass/: SKILL.md
.github/workflows/: ci.yml
benchmark/: .gitignore  BENCHMARK.md  PROTOCOL.md  arms.py  fetch.py  rank.py  report.py  run.py  score.py  skeleton.py  triage.py
benchmark/corpus/: manifest.json
benchmark/corpus/pygoat/: codeql.sarif  truth.json  (+1 more)
benchmark/results/: verdicts.json
diary/: 2026-07-18-01-bootstrap.md  2026-07-18-02-wp0.md  2026-07-18-03-wp1.md  2026-07-18-04-wp2.md  2026-07-18-05-wp3.md  2026-07-18-06-killgate.md  2026-07-18-07-wp3b.md  2026-07-19-08-wpa.md  2026-07-19-09-wpb.md  2026-07-19-10-wpc1.md  2026-07-19-11-wpc2.md  2026-07-19-12-mcp.md  2026-07-19-13-viz.md  2026-07-19-14-tier3.md  2026-07-19-15-packaging.md  2026-07-19-16-ingest.md  2026-07-19-17-enrich.md
docs/: architecture.md  background-brainstorm.md  pitfalls.md
rules/: labels.yml  secrets.yml
rules/python/: flask.yml  sqlalchemy.yml
secgraph/: __init__.py  cli.py  graphify_adapter.py  mcp_server.py  mcp_view.py  project.py  viz.py
secgraph/callgraph/: __init__.py  resolve.py
secgraph/ingest/: __init__.py  enrich.py  normalize.py  sarif.py  semgrep.py
secgraph/ir/: __init__.py  cfg.py  join.py  lower.py  model.py
secgraph/rules/: __init__.py  labels.py  loader.py  match.py  model.py
secgraph/taint/: __init__.py  engine.py  guards.py  interproc.py  model.py
secgraph/viz/: __init__.py  map.css  map.js
tests/auth/: test_guards.py
tests/callgraph/: test_tier3.py
tests/contract/: test_graphify_contract.py
tests/ingest/: test_enrich.py  test_ingest.py
tests/ir/: test_ir.py  test_join.py
tests/labels/: test_labels.py
tests/mcp/: test_mcp.py
tests/project/: test_projection.py
tests/rules/: test_rules.py
tests/taint/: test_interproc.py  test_taint.py
(+26 files in other folders)
