[project]
name = "secgraph"
version = "0.1.0"
description = "Local taint/data-flow security map built on graphify, with layered visualization and MCP triage."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alessandro Vadala" }]
keywords = ["security", "sast", "taint-analysis", "data-flow", "mcp", "graphify"]

dependencies = [
    "graphifyy==0.9.6",
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python",
    "pyyaml>=6",
    "mcp>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Out-of-band recall oracle only (CI); never a runtime dependency.
recall-oracle = ["pyre-check"]

[project.scripts]
secgraph = "secgraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secgraph"]
# non-.py data shipped in the wheel: the viz assets live under the package (included by default);
# the rule packs live at the repo root in dev, so map them into the package for a release.
artifacts = ["secgraph/viz/*.css", "secgraph/viz/*.js"]

[tool.hatch.build.targets.wheel.force-include]
"rules" = "secgraph/_rule_packs"
